--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       }
       .forget {
         color: blue;
+        cursor: pointer;
+      }
+      .forget:hover {
+        text-decoration: underline;
       }
       .remember-forget label {
         display: flex;
