--- a/index.html
+++ b/index.html
@@ -4,111 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="bootstrap-5.3.3-dist/css/bootstrap-utilities.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="bootstrap-5.3.3-dist/css/bootstrap-utilities.css"
+    />
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
     <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, Helvetica, sans-serif;
+      .d-flex {
+        gap: 15px;
       }
-      .landing-section {
-        height: 100vh;
-        overflow: hidden;
-        position: relative;
-        padding: 0 10px;
-        display: flex;
-        flex-direction: column;
+      .cover-heading {
+        font-size: 2.5rem;
       }
-      .video-background {
-        position: absolute;
-        z-index: -1;
-        top: 50%;
-        left: 50%;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transform: translate(-50%, -50%);
+      .lead {
+        max-width: 1000px;
       }
-      .logo {
-        width: 80px;
-        height: 80px;
+      .nav-link {
+        color: #ffc107;
       }
-      header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+      .btn-secondary {
+        background-color: #6c757d;
+        border-color: #6c757d;
       }
-      .nav-list {
-        list-style: none;
-        display: flex;
-        gap: 5px;
-        font-size: 14px;
-        letter-spacing: 2px;
-      }
-      .nav-list li {
-        color: rgb(234, 230, 230);
-        text-transform: uppercase;
-        padding: 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: all 0.3s;
-      }
-      .nav-list li:hover {
-        color: rgb(24, 24, 24);
-        background-color: rgb(234, 230, 230);
-      }
-      .content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      .content h1 {
-        color: white;
-        text-transform: uppercase;
-        font-size: 40px;
-        text-align: center;
-      }
-      .content a {
-        text-decoration: none;
-        text-transform: capitalize;
-        color: rgb(24, 24, 24);
-        background-color: white;
-        padding: 10px 50px;
-        border-radius: 40px;
-        transition: all 0.3s;
-      }
-      .content a:hover {
-        background-color: rgb(3, 90, 90);
-        color: white;
-      }
-      @media (max-width: 720px) {
-        header {
-          flex-direction: column;
-        }
+      .mt {
+        margin-top: 30px;
       }
     </style>
   </head>
-  <body>
-    <section class="landing-section">
-      <video autoplay muted loop class="video-background">
-        <source src="video.mp4" type="video/mp4" />
-      </video>
+  <body class="d-flex text-bg-dark justify-content-center text-center">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header>
-        <img class="logo" src="logo.png" alt="" />
-        <nav>
-          <ul class="nav-list">
-            <li>home</li>
-            <li>travel</li>
-            <li>blogs</li>
-            <li>support</li>
-          </ul>
-        </nav>
+        <div class="d-flex flex-column">
+          <h3 class="float-md-start mb-0">Cover</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Contact</a>
+          </nav>
+        </div>
       </header>
-      <div class="content">
-        <h1>explore the world</h1>
-        <a href="">explore</a>
-      </div>
-    </section>
+
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading">Cover your page</h1>
+        <p class="lead text-success">
+          Cover is a one-page template for building simple and beautiful home
+          pages. Download, edit the text, and add your own fullscreen background
+          photo to make it your own.
+        </p>
+        <p class="lead">
+          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+        </p>
+      </main>
+
+      <footer class="footer mt">
+        <p class="text-light">
+          Cover template for
+          <a href="https://getbootstrap.com/" class="text-primary">Bootstrap</a
+          >, by <a href="#" class="text-primary">@mohammed</a>.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
