--- a/index.html
+++ b/index.html
@@ -15,59 +15,76 @@
     />
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
     <style>
-      .d-flex {
-        gap: 15px;
-      }
-      .cover-heading {
-        font-size: 2.5rem;
-      }
-      .lead {
-        max-width: 1000px;
-      }
-      .nav-link {
-        color: #ffc107;
-      }
-      .btn-secondary {
-        background-color: #6c757d;
-        border-color: #6c757d;
-      }
-      .mt {
-        margin-top: 30px;
+      .table tbody tr:last-child {
+        border-bottom: transparent;
       }
     </style>
   </head>
-  <body class="d-flex text-bg-dark justify-content-center text-center">
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      <header>
-        <div class="d-flex flex-column">
-          <h3 class="float-md-start mb-0">Cover</h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
-          </nav>
-        </div>
-      </header>
+  <body>
+    <div class="container mt-5">
+      <!-- First Table -->
+      <table class="table">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
 
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page</h1>
-        <p class="lead text-success">
-          Cover is a one-page template for building simple and beautiful home
-          pages. Download, edit the text, and add your own fullscreen background
-          photo to make it your own.
-        </p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p>
-      </main>
-
-      <footer class="footer mt">
-        <p class="text-light">
-          Cover template for
-          <a href="https://getbootstrap.com/" class="text-primary">Bootstrap</a
-          >, by <a href="#" class="text-primary">@mohammed</a>.
-        </p>
-      </footer>
+      <!-- Second Table -->
+      <table class="table">
+        <thead class="table-secondary">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
