--- a/index.html
+++ b/index.html
@@ -20,71 +20,45 @@
       }
     </style>
   </head>
-  <body>
+<body>
     <div class="container mt-5">
-      <!-- First Table -->
-      <table class="table">
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <!-- Second Table -->
-      <table class="table">
-        <thead class="table-secondary">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="row grid column-gap-2 text-white mb-3">
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+        <div class="col bg-warning text-center">1</div>
+      </div>
+      <div class="row grid column-gap-3 mb-3">
+        <div class="col bg-light-2 text-center">2</div>
+        <div class="col bg-light-2 text-center">2</div>
+        <div class="col bg-light-2 text-center">2</div>
+        <div class="col bg-light-2 text-center">2</div>
+        <div class="col bg-light-2 text-center">2</div>
+        <div class="col bg-light-2 text-center">2</div>
+      </div>
+      <div class="row grid column-gap-3 mb-3">
+        <div class="col bg-light-2 text-center">3</div>
+        <div class="col bg-light-2 text-center">3</div>
+        <div class="col bg-light-2 text-center">3</div>
+        <div class="col bg-light-2 text-center">3</div>
+      </div>
+      <div class="row grid column-gap-3 mb-3">
+        <div class="col bg-light-2 text-center">4</div>
+        <div class="col bg-light-2 text-center">4</div>
+        <div class="col bg-light-2 text-center">4</div>
+      </div>
+      <div class="row grid column-gap-3 mb-3">
+        <div class="col bg-light-2 text-center">6</div>
+        <div class="col bg-light-2 text-center">6</div>
+      </div>
     </div>
   </body>
 </html>
