--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
       href="bootstrap-5.3.3-dist/css/bootstrap-utilities.css"
     />
+        <style>
+      .bg-light-2 {
+        background-color: rgb(214, 209, 209);
+      }
+    </style>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
     <style>
       .table tbody tr:last-child {
