--- a/index.html
+++ b/index.html
@@ -19,23 +19,16 @@
       rel="stylesheet"
     />
 
-    <!--  CSS Files -->
+    <!--  botstrap  -->
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="assets/bootstrap-utility/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="assets/bootstrap-utility/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-
-    <!-- Main CSS File -->
+    <!-- custome CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
