--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/img/apple-touch-icon.png"
+    />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -121,13 +124,9 @@
         <!-- End Section Title -->
 
         <div class="container">
-          <div class="row gy-4 justify-content-center">
+          <div class="row gy-4 justify-content-center align-items-center">
             <div class="col-lg-4">
-              <img
-                src="assets/img/profile.jpg"
-                alt=""
-                style="height: 100%; width: 100%; object-fit: cover"
-              />
+              <img src="assets/img/profile.jpg" alt="" class="about-img" />
             </div>
             <div class="col-lg-8 content">
               <h2 style="margin-bottom: 20px">
